--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -99,7 +99,7 @@ img {
 .box {
   border: @border;
   border-radius: @box-border-radius;
-  padding: 15px 10px;
+  padding: 10px 10px 15px;
   margin-bottom: 15px;
 }
 
