--- a/myface-onface-html/src/views/block/_checkout-header.html
+++ b/myface-onface-html/src/views/block/_checkout-header.html
@@ -1,13 +1,13 @@
 <header>
 	<div class="container">
 		<div class="col-xs-12 col-lg-3 shop-logo">
-			<a href="#" title="">
-				<img src="assets/images/upload/shop-logo/shop-logo.png" alt="myface">
+			<a href="#" title="DW Secret Saigon">
 				<h1 class="logo-text">DW Secret Saigon</h1>
 			</a>
 		</div>
 		<!--checkout-process-->
 		<div class="col-xs-12 col-lg-6 checkout-process">
+			
 		</div><!--/.checkout-process-->
 		<div class="col-xs-12 col-lg-3">
 			<div class="row hotline">
