--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -125,7 +125,7 @@
 	          	<p class="cart-amount">(<span>03</span> sản phẩm)</p>
 	          </div>
 	          <div class="cart-right">
-	          	<a class="cart-change" href="#">Thay đổi</a>
+	          	<a class="cart-change" href="cart.html">Thay đổi</a>
 	          </div>
 	        </div>
 	      </div><!--/.cart-header-->
