--- a/myface-onface-html/src/views/checkout-step-2.html
+++ b/myface-onface-html/src/views/checkout-step-2.html
@@ -6,22 +6,22 @@
 		  <div class="panel-heading">Thông tin thanh toán</div>
 		  <div class="panel-body">
 		  	<div class="form-group pay-form">
-          <div class="radio">
-            <label>
+          <div class="radio color-radio">
+            <label class="pay-control-1">
               <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-              <span>Thanh toán bằng tiền mặt khi nhận hàng (COD)</span>
+              <span><img src="assets/images/icons/c-cash.png" alt="myface">Thanh toán bằng tiền mặt khi nhận hàng (COD)</span>
             </label>
           </div>
-          <div class="radio">
-            <label>
+          <div class="radio color-radio">
+            <label class="pay-control-2">
               <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-              <span>Thanh toán bằng thẻ ATM có đăng ký Internet Bangking</span>
+              <span><img src="assets/images/icons/c-atm.png" alt="myface">Thanh toán bằng thẻ ATM có đăng ký Internet Bangking</span>
             </label>
           </div>
-          <div class="radio">
-            <label>
+          <div class="radio color-radio">
+            <label class="pay-control-3">
               <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
-              <span>Chuyển khoản qua ngân hàng</span>
+              <span><img src="assets/images/icons/c-bank.png" alt="myface">Chuyển khoản qua ngân hàng</span>
             </label>
           </div>
         </div>
@@ -33,7 +33,7 @@
 		<div class="box checkout-box-info">
 			<div class="box-row">
         <label class="pull-left">Địa chỉ nhận hàng</label>
-        <a class="pull-right cart-change" href="#">Thay đổi</a>
+        <a class="pull-right cart-change" href="checkout-step-1.html">Thay đổi</a>
       </div>
       <div class="box-row customer-info">
         <span class="customer-name">Phan Thị Lê</span> -
@@ -53,7 +53,7 @@
 	          	<p class="cart-amount">(<span>03</span> sản phẩm)</p>
 	          </div>
 	          <div class="cart-right">
-	          	<a class="cart-change" href="#">Thay đổi</a>
+	          	<a class="cart-change" href="cart.html">Thay đổi</a>
 	          </div>
 	        </div>
 	      </div><!--/.cart-header-->
