--- a/myface-onface-html/src/views/checkout-step-3.html
+++ b/myface-onface-html/src/views/checkout-step-3.html
@@ -3,17 +3,17 @@
 <main class="container checkout-step-3">
 	<div class="col-lg-offset-3 col-lg-6">
 		<div class="step-3-block st-bl-1">
-			<label class="step-block-title">Đặt hàng thành công</label>
-			<p>Mã đơn hàng của bạn là: <span class="invoice-number">#1234567890</span></p>
+			<label class="step-block-title"> <span><i class="fa fa-check-circle"></i> </span>Đặt hàng thành công</label>
+			<p>Mã đơn hàng của bạn là: <span class="invoice-number">#101200160311.</span></p>
 		</div>
 		<div class="divider"></div>
 		<div class="step-3-block st-bl-2">
-			<p><span>DW Secret Saigon</span> Cảm ơn vì đã ghé và mua hàng</p>
+			<p><span class="shop-name">DW Secret Saigon</span> cảm ơn vì đã ghé và mua hàng</p>
 			<p>Nếu có bất kì vấn đề gì liên quan đến giao nhận & hàng hóa, bạn đừng ngần ngại liên hệ với Shop, Shop sẽ trả lời và hỗ trợ bạn trong thời gian ngắn nhất</p>
 		</div>
 		<div class="divider"></div>
 		<div class="step-3-block st-bl-3">
-			<a class="backshop-btn" href="#">Tiếp tục mua sắm tại <label>DW Secret Saigon</label></a>
+			<a class="backshop-btn" href="#">Tiếp tục mua sắm tại <label class="shop-name">DW Secret Saigon</label> <i class="fa fa-angle-right"></i></a>
 		</div>
 	</div>
 </main>
