--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -2,6 +2,9 @@
 	.container {
 		padding: 0;
 	}
+	.checkout-step-3 {
+		padding-top: 40px;
+	}
 	header {	
 		height: 70px;
 		overflow: hidden;
@@ -10,9 +13,15 @@
 		.shop-logo {
 			position: relative;
 			padding-left:  30px;
+			&:hover {
+				&:before {
+					color: @secondary-color;
+				}
+			}
 			&:before {
 				content: "\f104";
 				font: normal normal normal 14px/1 FontAwesome;
+				font-size: 18px;
 				width: 15px;
 				text-align: left;
 				color: @primary-color;
@@ -22,14 +31,15 @@
 			}
 			a {
 				display: block;
-				padding: 23px 0;
+				padding: 20px 0;
 			}
 		}
 		.logo-text {
-			font-size: 26px;
-			font-weight: bold;
-			color: @secondary-color;
-			display: none;
+			font-size: 27px;
+	    font-weight: bold;
+	    margin: 0;
+	    color: @secondary-color;
+	    word-spacing: 2px;
 		}
 	}
 	.divider {
@@ -50,6 +60,9 @@
 	.control-label {
 		padding-right: 0;
 		font-weight: normal;
+	}
+	textarea {
+		resize: none;
 	}
 }
 .checkout-group-8 {
@@ -114,7 +127,7 @@
 	padding-top: 10px;
 	border-top: @border;
 	.btn {
-		width: 160px;
+		width: 155px;
 	}
 }
 .checkout-box-2 {
@@ -248,6 +261,7 @@
 }
 .btn-pay {
 	width: 240px;
+	margin-top: 15px;
 	font-weight: bold;
 	font-size: 18px;
 	i {
@@ -255,7 +269,82 @@
 		font-size: 20px;
 	}
 }
+.pay-form {
+	.radio {
+		margin-top: 8px;
+		margin-bottom: 8px;
+		&:first-child {
+			margin-top: 4px;
+		}
+		label {
+			display: table-cell;
+			ma
+			input {
+				margin-top: 6px;
+			}
+			img {
+				width: 46px;
+				height: 32px;
+				vertical-align: middle;
+				margin: 0 5px;
+			}
+		}
+	}
+}
 .step-3-block {
+	position: relative;
 	.block;
-	padding: 0 10px;
+	padding: 0 15px 0 30px;
+	.step-block-title {
+		font-weight: 500;
+		font-size: 20px;
+		position: relative;
+		margin-bottom: 15px;
+		> span {
+			position: absolute;
+			top: 0;
+			left: -30px;
+			color: @green;
+		}
+	}
+	.invoice-number {
+		font-size: 16px;
+		color: @green;
+		font-weight: 500;
+	}
+	&.st-bl-1 {
+		> p {
+			margin-bottom: 0;
+		}
+		& + .divider{
+			margin-top: 15px;
+		}
+	}
+	&.st-bl-3 {
+		color: @secondary-color;
+		font-size: 18px;
+		.backshop-btn {
+			color: @secondary-color;
+			position: relative;
+			i {
+				position: absolute;
+				top: 2px;
+				left: 100%;
+				margin-left: 10px;
+				color: @primary-color;
+				margin-left: 10px;
+				font-size: 22px;
+			}
+			&:hover {
+				color: @primary-color;
+				.shop-name {
+					color: @primary-color;
+				}
+			}
+		}
+	}
+	.shop-name {
+		color: @secondary-color;
+		font-weight: bold;
+	}
 }
