--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -22,6 +22,7 @@
 @import "pagination.less";
 @import "modal.less";
 @import "panel.less";
+@import "process.less";
 //BLOCKS
 //------
 @import "block/header.less";
