--- a/myface-onface-html/src/views/block/_checkout-header.html
+++ b/myface-onface-html/src/views/block/_checkout-header.html
@@ -7,7 +7,11 @@
 		</div>
 		<!--checkout-process-->
 		<div class="col-xs-12 col-lg-6 checkout-process">
-			
+			<ul class="progressbar">
+				<li class="active">Địa chỉ nhận hàng</li>
+				<li>Thông tin thanh toán</li>
+				<li>Đặt hàng - xong</li>
+			</ul>
 		</div><!--/.checkout-process-->
 		<div class="col-xs-12 col-lg-3">
 			<div class="row hotline">
