--- a/myface-onface-html/src/assets/less/style/forms.less
+++ b/myface-onface-html/src/assets/less/style/forms.less
@@ -3,6 +3,7 @@
  * ---------------
  */
 .form-control {
+  padding: 6px 8px;
   .border-radius(@input-radius);
   box-shadow: none;
   border-color: @line-color-1;
@@ -10,12 +11,7 @@
     border-color: @light-blue;
     box-shadow: none;
   }
-  &::-moz-placeholder,
-  &:-ms-input-placeholder,
-  &::-webkit-input-placeholder {
-    color: #bbb;
-    opacity: 1;
-  }
+  .placeholder(@text-color-2, italic, 0.7);
 
   &:not(select) {
     -webkit-appearance: none;
