--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -744,7 +744,8 @@ img {
 }
 /*progressbar*/
 .checkout-process {
-  padding: 40px 15px 0;
+  padding: 40px 0 0;
+  margin-left: -25px;
 }
 .progressbar {
   counter-reset: step;
@@ -765,7 +766,7 @@ img {
   background: url('../images/icons/c-cart.png') no-repeat;
   position: absolute;
   left: 50%;
-  top: -23px;
+  top: -25px;
   margin-left: -6px;
   display: none;
 }
@@ -775,8 +776,8 @@ img {
   background: #ebebeb;
   position: absolute;
   left: -40px;
-  right: -40px;
-  top: -10px;
+  right: 90px;
+  top: -12px;
   z-index: -1;
 }
 .progressbar li:first-child {
@@ -784,18 +785,34 @@ img {
 }
 .progressbar li:first-child:after {
   left: 0;
+  right: -40px;
 }
 .progressbar li:last-child {
   padding: 0;
 }
-.progressbar li.active {
+.progressbar li:last-child:after {
+  left: -90px;
+  right: 0;
+}
+.progressbar li.active,
+.progressbar li.completed {
   color: #3ac562;
 }
-.progressbar li.active:before {
+.progressbar li.active:before,
+.progressbar li.completed:before {
   display: block;
 }
-.progressbar li.active:after {
+.progressbar li.active:after,
+.progressbar li.completed:after {
   background: #3ac562;
+}
+.progressbar li.active:last-child:before,
+.progressbar li.completed:last-child:before {
+  left: auto;
+  right: -3px;
+}
+.progressbar li.completed:before {
+  display: none;
 }
 footer {
   width: 100%;
@@ -1142,6 +1159,11 @@ footer a {
   border-bottom: 1px solid #dfdfdf;
   margin-bottom: 15px;
 }
+@media (max-width: 767px) {
+  .checkout header {
+    height: auto;
+  }
+}
 .checkout header .shop-logo {
   position: relative;
   padding-left: 30px;
@@ -1214,6 +1236,11 @@ footer a {
 .hotline span {
   display: block;
 }
+@media (max-width: 767px) {
+  .hotline {
+    padding: 0 15px 10px;
+  }
+}
 .hotline-number {
   color: #ff5722;
   margin-left: 5px;
@@ -1252,8 +1279,23 @@ footer a {
 .box-login .btn {
   width: 155px;
 }
+@media (max-width: 767px) {
+  .box-login .btn {
+    width: 100%;
+  }
+}
 .checkout-box-2 .coupon-input {
   width: 160px;
+}
+@media (max-width: 991px) {
+  .checkout-box-2 .coupon-input {
+    display: inline-block;
+  }
+}
+.checkout-box-2 .btn-secondary {
+  border-color: #7d89c1;
+  width: auto;
+  display: inline-block;
 }
 .box-cart {
   border: 1px solid #dfdfdf;
@@ -1433,6 +1475,11 @@ footer a {
   color: #4355a5;
   font-size: 18px;
 }
+@media (max-width: 767px) {
+  .step-3-block.st-bl-3 {
+    font-size: 14px;
+  }
+}
 .step-3-block.st-bl-3 .backshop-btn {
   color: #4355a5;
   position: relative;
@@ -1445,6 +1492,11 @@ footer a {
   margin-left: 10px;
   font-size: 22px;
 }
+@media (max-width: 767px) {
+  .step-3-block.st-bl-3 .backshop-btn i {
+    font-size: 16px;
+  }
+}
 .step-3-block.st-bl-3 .backshop-btn:hover {
   color: #ff5722;
 }
@@ -1454,6 +1506,11 @@ footer a {
 .step-3-block .shop-name {
   color: #4355a5;
   font-weight: bold;
+}
+@media (max-width: 991px) {
+  .checkout-process {
+    display: none;
+  }
 }
 select.bs-select-hidden,
 select.selectpicker {
