--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -10,6 +10,9 @@
 		overflow: hidden;
 		border-bottom: @border;
 		margin-bottom: 15px;
+		@media (max-width: @screen-xs-max) {
+	    height: auto;
+	  }
 		.shop-logo {
 			position: relative;
 			padding-left:  30px;
@@ -91,6 +94,9 @@
 	span {
 		display: block;
 	}
+	@media (max-width: @screen-xs-max) {
+		padding: 0 15px 10px;
+	}
 }
 .hotline-number {
 	.orange-text();
@@ -128,11 +134,22 @@
 	border-top: @border;
 	.btn {
 		width: 155px;
+		@media (max-width: @screen-xs-max) {
+			width: 100%;
+		}
 	}
 }
 .checkout-box-2 {
 	.coupon-input {
 		width: 160px;
+		@media (max-width: @screen-sm-max) {
+			display: inline-block;
+		}
+	}
+	.btn-secondary {
+		border-color: darken(@btn-color-2, 5%);
+		width: auto;
+		display: inline-block;
 	}
 }
 .box-cart {
@@ -323,6 +340,9 @@
 	&.st-bl-3 {
 		color: @secondary-color;
 		font-size: 18px;
+		@media (max-width: @screen-xs-max) {
+		  font-size: 14px;
+		}
 		.backshop-btn {
 			color: @secondary-color;
 			position: relative;
@@ -334,6 +354,9 @@
 				color: @primary-color;
 				margin-left: 10px;
 				font-size: 22px;
+				@media (max-width: @screen-xs-max) {
+				  font-size: 16px;
+				}
 			}
 			&:hover {
 				color: @primary-color;
@@ -346,5 +369,10 @@
 	.shop-name {
 		color: @secondary-color;
 		font-weight: bold;
+	}
+}
+@media (max-width: @screen-sm-max) {
+  .checkout-process {
+		display: none;
 	}
 }
