--- a/myface-onface-html/src/assets/less/style/process.less
+++ b/myface-onface-html/src/assets/less/style/process.less
@@ -1,6 +1,7 @@
 /*progressbar*/
 .checkout-process {
-	padding: 40px 15px 0;
+	padding: 40px 0 0;
+	margin-left: -25px;
 }
 .progressbar {
 	counter-reset: step;
@@ -19,7 +20,7 @@
 			background: url('../images/icons/c-cart.png') no-repeat;
 			position: absolute;
 			left: 50%;
-			top: -23px;
+			top: -25px;
 			margin-left: -6px;
 			display: none;
 		}
@@ -29,28 +30,43 @@
 			background: @line-color-2;
 			position: absolute;
 			left: -40px;
-			right: -40px;
-			top: -10px;
+			right: 90px;
+			top: -12px;
 			z-index: -1;
 		}
 		&:first-child {
 			padding: 0;
 			&:after {
-				left: 0
+				left: 0;
+				right: -40px;
 			}
 		}
 		&:last-child {
 			padding: 0;
 			&:after {
+				left: -90px;
+				right: 0;
 			}
 		}
-		&.active {
+		&.active, 
+		&.completed {
 			color: @green;
 			&:before {
 				display: block;
 			}
 			&:after {
 				background: @green;
+			}
+			&:last-child {
+				&:before {
+					left: auto;
+					right: -3px;
+				}
+			}
+		}
+		&.completed {
+			&:before {
+				display: none;
 			}
 		}
 	}
