--- a/myface-onface-html/src/views/block/_checkout-header.html
+++ b/myface-onface-html/src/views/block/_checkout-header.html
@@ -1,6 +1,6 @@
 <header>
 	<div class="container">
-		<div class="col-xs-12 col-lg-3 shop-logo">
+		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
 			<a href="#" title="DW Secret Saigon">
 				<h1 class="logo-text">DW Secret Saigon</h1>
 			</a>
@@ -13,7 +13,7 @@
 				<li>Đặt hàng - xong</li>
 			</ul>
 		</div><!--/.checkout-process-->
-		<div class="col-xs-12 col-lg-3">
+		<div class="col-xs-12 col-sm-6 col-lg-3">
 			<div class="row hotline">
 				<span class="hotline-text">Hotline hỗ trợ:<a class="hotline-number" href="tel:+1900636099">1900 636 099</a></span>
 				<span class="note">(08-18h, T2-T7)</span>
