--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -1,5 +1,5 @@
 //FONTS
-
+@import "fontface.less";
 //Bootstrap Variables & Mixins
 //The core bootstrap code have not been modified. These files
 //are included only for reference.
@@ -33,6 +33,7 @@
 //------
 @import "page/product-onface.less";
 @import "page/checkout.less";
+@import "page/cart.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
