--- a/myface-onface-html/src/views/checkout-step-3.html
+++ b/myface-onface-html/src/views/checkout-step-3.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="divider"></div>
 		<div class="step-3-block st-bl-2">
-			<p><span class="shop-name">DW Secret Saigon</span> cảm ơn vì đã ghé và mua hàng</p>
+			<p><span class="shop-name">DW Secret Saigon</span> cảm ơn bạn đã ghé thăm & mua hàng</p>
 			<p>Nếu có bất kì vấn đề gì liên quan đến giao nhận & hàng hóa, bạn đừng ngần ngại liên hệ với Shop, Shop sẽ trả lời và hỗ trợ bạn trong thời gian ngắn nhất</p>
 		</div>
 		<div class="divider"></div>
