--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,300,700,900&subset=latin,vietnamese);
 /*
  * Core: General Layout Style
  * -------------------------
@@ -811,6 +812,9 @@ img {
   left: auto;
   right: -3px;
 }
+.progressbar li.completed {
+  color: #727272;
+}
 .progressbar li.completed:before {
   display: none;
 }
@@ -1511,6 +1515,20 @@ footer a {
   .checkout-process {
     display: none;
   }
+}
+.cart .amount {
+  font-weight: normal;
+}
+.cart .orange-text {
+  font-weight: bold;
+}
+.cart-back-box {
+  text-align: center;
+}
+.cart-back-btn {
+  text-align: center;
+  color: #4355a5;
+  border-color: #4355a5;
 }
 select.bs-select-hidden,
 select.selectpicker {
