--- a/myface-onface-html/src/assets/less/style/plugin/bootstrap-select.less
+++ b/myface-onface-html/src/assets/less/style/plugin/bootstrap-select.less
@@ -134,7 +134,7 @@ select.selectpicker {
       display: inline-block;
       overflow: hidden;
       width: 100%;
-      text-align: left;
+      text-align: center;
     }
 
     .caret {
