--- a/myface-onface-html/src/views/block/modal/_invoice-modal.html
+++ b/myface-onface-html/src/views/block/modal/_invoice-modal.html
@@ -23,7 +23,7 @@
                     <img src="assets/images/upload/product/product-2.jpg" alt="myface">
                   </div>
                   <div class="product-info">
-                    <span href="#" class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</span>
+                    <span class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</span>
                   </div>
                 </div>
               </td>
@@ -46,7 +46,7 @@
                     <img src="assets/images/upload/product/product-2.jpg" alt="myface">
                   </div>
                   <div class="product-info">
-                    <span href="#" class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</span>
+                    <span class="product-title">Combo 2 Hộp Sữa Bột Ensure Gold Acti M2 400g</span>
                   </div>
                 </div>
               </td>
