--- a/myface-onface-html/src/views/checkout-step-3.html
+++ b/myface-onface-html/src/views/checkout-step-3.html
@@ -3,7 +3,7 @@
 <header>
 	<div class="container">
 		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
-			<a href="#" title="DW Secret Saigon">
+			<a href="myface-shop.html" title="DW Secret Saigon">
 				<h1 class="logo-text">DW Secret Saigon</h1>
 			</a>
 		</div>
@@ -38,7 +38,7 @@
 		</div>
 		<div class="divider"></div>
 		<div class="step-3-block st-bl-3">
-			<a class="backshop-btn" href="#">Tiếp tục mua sắm tại <label class="shop-name">DW Secret Saigon</label> <i class="fa fa-angle-right"></i></a>
+			<a class="backshop-btn" href="myface-shop.html">Tiếp tục mua sắm tại <label class="shop-name">DW Secret Saigon</label> <i class="fa fa-angle-right"></i></a>
 		</div>
 	</div>
 </main>
