--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -1044,6 +1044,7 @@ footer a {
   font-size: 12px;
   font-style: italic;
   color: #b6b6b6;
+  cursor: pointer;
 }
 .invoice-remove:hover {
   color: #dd4b39;
@@ -1516,19 +1517,158 @@ footer a {
     display: none;
   }
 }
+.gift:before {
+  content: "-";
+  display: block;
+  line-height: 5px;
+  color: transparent;
+}
+.gift .item {
+  padding-left: 10px;
+  padding-top: 5px;
+}
+.gift tr td {
+  position: relative;
+  border-top: 1px dashed #3ac562;
+  border-bottom: 1px dashed #3ac562;
+}
+.gift tr td:first-child {
+  border-radius: 4px 0 0 4px;
+  border-left: 1px dashed #3ac562;
+}
+.gift tr td:last-child {
+  border-radius: 0 4px 4px 0;
+  border-right: 1px dashed #3ac562;
+  padding-right: 10px;
+}
+.gift-icon {
+  width: 36px;
+  height: 32px;
+  display: block;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  background-color: transparent;
+  background: url('../images/icons/gift.png') no-repeat;
+}
+.cart {
+  min-width: 480px;
+}
 .cart .amount {
   font-weight: normal;
+  font-size: 13px;
 }
 .cart .orange-text {
   font-weight: bold;
+}
+.cart .invoice-table {
+  margin-top: -15px;
+  border-collapse: separate;
+  border-spacing: 0 5px;
+}
+.cart .invoice-table tbody tr td {
+  vertical-align: top;
+  border-bottom: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 1.3;
+}
+.cart .invoice-table tbody tr td:last-child {
+  font-weight: bold;
+}
+.cart .invoice-table tbody tr:first-child td {
+  border-top: 0;
+}
+.cart .invoice-table tbody.gift:before {
+  content: "-";
+  display: block;
+  line-height: 5px;
+  color: transparent;
+}
+.cart .invoice-table tbody.gift .item {
+  padding-left: 10px;
+  padding-top: 5px;
+}
+.cart .invoice-table tbody.gift tr td {
+  position: relative;
+  border-top: 1px dashed #3ac562;
+  border-bottom: 1px dashed #3ac562;
+}
+.cart .invoice-table tbody.gift tr td:first-child {
+  border-radius: 4px 0 0 4px;
+  border-left: 1px dashed #3ac562;
+}
+.cart .invoice-table tbody.gift tr td:last-child {
+  border-radius: 0 4px 4px 0;
+  border-right: 1px dashed #3ac562;
+  padding-right: 10px;
+}
+.cart .invoice-table > tbody + tbody {
+  border-top: 0;
+}
+.cart .invoice-table .product-info > span {
+  display: block;
+}
+.cart .invoice-table .product-info .product-title {
+  margin-bottom: 6px;
+}
+.cart .invoice-table .product-info .gift-span {
+  color: #3ac562;
+}
+.cart .invoice-table .product-info .property-value {
+  color: #4355a5;
+}
+.cart .invoice-remove {
+  margin-top: 10px;
+}
+.cart .invoice-remove span {
+  text-decoration: none;
+  font-size: 14px;
+}
+.cart .disable-amount {
+  min-width: auto;
+  width: 65px !important;
+  height: 34px;
+  opacity: 1 !important;
+  background-color: #ebebeb;
+  color: #212121;
+  border-color: #dfdfdf;
+}
+.cart .amount-dropdown {
+  width: 65px !important;
+  height: 34px;
+}
+.cart .cart-table .cart-body {
+  border-top: 0;
+  padding-top: 5px;
+}
+.cart .cart-table .cart-body .ship-row .cart-left,
+.cart .cart-table .cart-body .ship-row .cart-right {
+  padding-bottom: 15px;
+}
+.cart .btn-checkout {
+  margin-top: 10px;
 }
 .cart-back-box {
   text-align: center;
 }
 .cart-back-btn {
   text-align: center;
+  text-decoration: underline;
+  position: relative;
   color: #4355a5;
   border-color: #4355a5;
+}
+.cart-back-btn i {
+  position: absolute;
+  left: 100%;
+  top: 1px;
+  margin-left: 10px;
+  color: #ff5722;
+  font-size: 18px;
+}
+.cart-back-btn:hover i {
+  color: #4355a5;
 }
 select.bs-select-hidden,
 select.selectpicker {
@@ -1627,7 +1767,7 @@ select.selectpicker {
   display: inline-block;
   overflow: hidden;
   width: 100%;
-  text-align: left;
+  text-align: center;
 }
 .bootstrap-select.btn-group .dropdown-toggle .caret {
   position: absolute;
