--- a/myface-onface-html/src/views/checkout-step-2.html
+++ b/myface-onface-html/src/views/checkout-step-2.html
@@ -3,7 +3,7 @@
 <header>
 	<div class="container">
 		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
-			<a href="#" title="DW Secret Saigon">
+			<a href="myface-shop.html" title="DW Secret Saigon">
 				<h1 class="logo-text">DW Secret Saigon</h1>
 			</a>
 		</div>
